Fixing QA warnings